prodMetadata/src/objects/Geo_Location__c.object
<CustomObject>
    <description>Holds a Geo cordinate, and information to build a balloon for this point</description>
    <fields>
        <fullName>About_Us__c</fullName>
        <inlineHelpText>May contain valid XHTML markup 
http://www.w3.org/TR/xhtml1/</inlineHelpText>
        <label>About Us</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Balloon_Template__c</fullName>
        <description>Various types of templates provided</description>
        <inlineHelpText>Select the style of balloon that will appear when user clicks on the marker</inlineHelpText>
        <label>Balloon Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tall Photo</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Text and Photo Banner</fullName>
                </value>
                <value>
                    <fullName>Text and Tall Photo</fullName>
                </value>
                <value>
                    <fullName>Text and Weblink</fullName>
                </value>
                <value>
                    <fullName>Wide Photo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer Info</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode_Status__c</fullName>
        <label>Geocode Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_URL__c</fullName>
        <defaultValue>&apos;http://maps.google.com/mapfiles/kml/pushpin/ylw-pushpin.png&apos;</defaultValue>
        <inlineHelpText>The URL of an icon for this location, up to 64 x 64 px</inlineHelpText>
        <label>Icon URL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoURL__c</fullName>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoCaption__c</fullName>
        <label>Photo Caption</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoTitle__c</fullName>
        <label>Photo Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhotoURL__c</fullName>
        <label>Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebLinkName__c</fullName>
        <label>Web Link Name</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebLink__c</fullName>
        <description>Link to the website for this location</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>lat__c</fullName>
        <label>lat</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lon__c</fullName>
        <label>lon</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <label>Geo Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Geocode_Status__c</columns>
        <columns>Icon_URL__c</columns>
        <columns>lat__c</columns>
        <columns>lon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Geocode_Status__c</columns>
        <columns>Icon_URL__c</columns>
        <columns>lat__c</columns>
        <columns>lon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Locations_w_Zip_Lat_Lon</fullName>
        <columns>NAME</columns>
        <columns>lat__c</columns>
        <columns>lon__c</columns>
        <filterScope>Everything</filterScope>
        <label>Locations w/ Zip, Lat, Lon</label>
    </listViews>
    <listViews>
        <fullName>Unsuccessful</fullName>
        <columns>NAME</columns>
        <columns>Geocode_Status__c</columns>
        <columns>WebLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geocode_Status__c</field>
            <operation>notEqual</operation>
            <value>G_GEO_MANUAL,G_GEO_SUCCESS</value>
        </filters>
        <label>Unsuccessful</label>
    </listViews>
    <nameField>
        <label>Geo Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Valid_Lat</fullName>
        <active>true</active>
        <description>ensure that the latitude falls on the map of the earth</description>
        <errorConditionFormula>lat__c &lt; -85.0  || lat__c &gt; 85.0</errorConditionFormula>
        <errorDisplayField>lat__c</errorDisplayField>
        <errorMessage>Valid Latitudes are less than 85.0 North and greater than -85.0 South</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Lon</fullName>
        <active>true</active>
        <description>Valid Longitudes are &gt; -180 East and &lt; 180 West</description>
        <errorConditionFormula>lon__c &gt; 180 || lon__c &lt; -180</errorConditionFormula>
        <errorDisplayField>lon__c</errorDisplayField>
        <errorMessage>Valid Longitudes are greater than -180.0 and less than 180.0</errorMessage>
    </validationRules>
</CustomObject>